[VSPC-58] UI footer alignment issue

--- a/vspace/src/main/webapp/resources/extra/Module_1___slideshow___1.css
+++ b/vspace/src/main/webapp/resources/extra/Module_1___slideshow___1.css
@@ -1,17 +1,17 @@
 .Group_7_Class {
 	position: absolute;
-	width: 942px;
-	height: 72px;
-	left: 169px;
-	top: 297px;
-	overflow: visible;
+    width: 942px;
+    height: 72px;
+    left: 169px;
+    top: 137px;
+    overflow: visible;
 }
 .Slideshow_previous_Class {
 	position: absolute;
     width: 50px;
     height: 50px;
     left: 70px;
-    top: -160px;
+    top: 15px;
 	overflow: visible;
 }
 .Ellipse_11 {
@@ -37,7 +37,7 @@
 	width: 50px;
     height: 50px;
     left: 870px;
-    top: -160px;
+    top: 15px;
 	overflow: visible;
 }
 .Ellipse_12 {
